# ca2a

./: .gitignore  404.html  ADOPTERS.md  CHANGELOG.md  CHARTER.md  CNAME  CONTRIBUTING.md  GOVERNANCE.md  LIMITATIONS.md  MAINTAINERS.md  NOTICE  PRIVACY.md  README.md  ROADMAP.md  SECURITY.md  index.html  index.md  llms-full.txt  llms.txt  mkdocs.yml  objects.inv  pyproject.toml  requirements-docs.txt  sitemap.xml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml  docker.yml  docs.yml  release-drafter.yml  release.yml  scorecard.yml
CHANGELOG/: index.html
CONTRIBUTING/: index.html
GOVERNANCE/: index.html
LIMITATIONS/: index.html
ROADMAP/: index.html
docs/: SPEC.md  concepts.md  configuration.md  quickstart.md
docs/SPEC/: index.html  index.md
docs/concepts/: index.html  index.md
docs/configuration/: index.html  index.md
docs/quickstart/: index.html  index.md
docs/spec/: attestation.md  call-graph.md  cedar-policy.md  component-model.md  conformance.md  delegation-chain.md  error-codes.md  failure-modes.md  profile.md  provenance-dag.md  sealed-channel.md  threat-model.md  trace-a2a-profile.md  transport.md  verification-library.md
docs/spec/attestation/: index.html  index.md
docs/spec/call-graph/: index.html
docs/spec/cedar-policy/: index.html
docs/spec/component-model/: index.html
docs/spec/conformance/: index.html
docs/spec/delegation-chain/: index.html  index.md
docs/spec/error-codes/: index.html
docs/spec/failure-modes/: index.html
docs/tutorials/: authoring-a-delegation-credential.md  emit-and-verify-provenance.md  integrating-with-a2a.md  reproducing-the-claims.md  verify-a-delegation-chain.md
examples/cross-operator-delegation/: README.md  ca2a-config.yaml  chain.json  dag.json  demo.py  policy.cedar
examples/minimal/: README.md  ca2a-config.yaml  chain.json
examples/trace-dag/: README.md  demo.py
experiments/: README.md
experiments/claim1-attenuation-soundness/: README.md  run.py
experiments/claim2-cross-chain-replay/: README.md  run.py
experiments/claim3-scope-policy-intersection/: README.md  run.py
experiments/claim4-sealed-payload-confidentiality/: README.md  run.py
experiments/claim5-provenance-dag-integrity/: README.md  run.py
experiments/claim6-cross-operator-attestation/: README.md  run.py
governance/: ca2a-enforcement.yaml
scripts/: gen_agt_evidence.py  gen_example_chain.py
search/: search_index.json
src/ca2a_runtime/: __init__.py  attestation.py  benchmarks.py  canonical.py  cedar.py  cli.py  config.py  errors.py  node.py  peer.py  policy.py  policy_loader.py  provenance.py  server.py  trace_binding.py
src/ca2a_verify/: __init__.py  dag.py  sev_snp.py  tdx.py  tpm.py  verify.py
tests/conformance/: README.md  conftest.py  test_profile_conformance.py
tests/unit/: conftest.py  test_a2a_adapter.py  test_canonical.py  test_cedar.py  test_channel_and_tee.py  test_claim1_attenuation.py  test_claim2_replay.py  test_claim3_scope_policy.py  test_claim4_sealed.py  test_claim5_provenance.py  test_claim6_cross_operator.py  test_config.py  test_delegation.py  test_errors.py  test_live_call.py  test_peer.py  test_peer_request.py  test_policy_loader.py  test_provenance.py  test_sealed_channel.py  test_server.py  test_sev_snp.py  test_tdx.py  test_tpm.py  test_trace_binding.py  test_verify.py
(+32 files in other folders)
